storage, location, camara and phone permission worked. Need to check contacts options

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,5 @@
     <string name="camara_activity_text">CAMARA</string>
     <string name="phone_activity_text">PHONE</string>
     <string name="contacts_activity_text">CONTACTS</string>
+    <string name="snackbar_camara_text">Acceder a la cámara</string>
 </resources>
